move Header to _app and fix: header not fitting screen on mobile

--- a/styles/components.module.css
+++ b/styles/components.module.css
@@ -1,39 +1,38 @@
-.project {
-  background-color: white;
-  border: solid 1px black;
-  margin: 1em;
-  padding: 1em;
-  max-width: 300px;
-  min-width: 300px;
-}
 
 .header {
-  background-color: white;
-  margin: 0.5em 0;
+  padding: 1em 0;
+  position: fixed;
+  top: 0px;
+  background-color: transparent;
+  margin: 0;
   font-size: 100%;
   width: 100vw;
-}
-.header,
-.header nav {
+  backdrop-filter: blur(3px);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 1px rgb(0, 110, 255);
+}
+
+.header nav {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 }
 
-.header h2 {
-  margin: 0.5em 1em;
-  cursor: pointer;
+.header .circle {
+  width: 30px;
+  height: 30px;
+  border: solid 2px rgb(0, 110, 255);
+  border-radius: 50%;
 }
 
-.header nav * {
-  padding: 0.5em 1em;
-  margin: 0 1em;
-  text-decoration: none;
-}
-
-.header nav *:hover {
-  color: white;
-  background-color: black;
+.header button {
+  margin: 0;
+  border: solid transparent;
+  background-color: transparent;
 }
 
 .postCard {
@@ -64,11 +63,4 @@
   font-size: 0.8em;
   word-wrap: break-word;
   text-align: center;
-}
-
-@media screen and (max-width: 500px) {
-  .header {
-    font-size: 50%;
-    width: 90vw;
-  }
 }
