--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -15,7 +15,7 @@
 }
 
 .homePage main {
-  margin: 1em 0;
+  margin: 4.2em 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
